--- a/SignalR_Server_Client/SignalR/SignalR.Client/Pages/Chat.razor
+++ b/SignalR_Server_Client/SignalR/SignalR.Client/Pages/Chat.razor
@@ -123,7 +123,7 @@
                         <label>Select user to message:</label>
                         <select @bind="_selectedUser" @bind:event="onchange" class="input-field">
                             <option value="">Select User</option>
-                            @foreach (var user in _onlineUsers.Where(u => u != _currentUser).OrderBy(u => u))
+                            @foreach (var user in _onlineUsers.Where(u => u != _currentUser).Distinct().OrderBy(u => u))
                             {
                                 <option value="@user">@user</option>
                             }
@@ -477,15 +477,15 @@
         align-items: center;
     }
 
-    .group-select label, .user-select label {
-        margin-right: 10px;
-    }
+        .group-select label, .user-select label {
+            margin-right: 10px;
+        }
 
-    .group-select select, .user-select select {
-        padding: 5px;
-        border: 1px solid #ddd;
-        border-radius: 3px;
-    }
+        .group-select select, .user-select select {
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+        }
 
     .log-window {
         width: 100%;
@@ -505,11 +505,11 @@
         border: 1px solid #eee;
     }
 
-    .log-list p {
-        margin: 2px 0;
-        padding: 5px;
-        border-radius: 3px;
-    }
+        .log-list p {
+            margin: 2px 0;
+            padding: 5px;
+            border-radius: 3px;
+        }
 
     .log-error {
         background-color: #f8d7da;
@@ -550,4 +550,4 @@
         background-color: #dc3545;
         color: #fff;
     }
-</style>
+</style>"
