--- a/SignalR_Server_Client/SignalR/SignalR.Client/Pages/Home.razor
+++ b/SignalR_Server_Client/SignalR/SignalR.Client/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>AI Communications with SignalR</h1>
 
-Welcome to your new app.
+This app is designed to allow for muti-language organizations to communicate using the native language of the speaker.
